# AgendarDEL

./: .gitignore  AgendarDEL.code-workspace  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  serve.py
agendardel/: config.py  logger.py  main.py  security.py  utils.py
agendardel/alembic/: env.py
agendardel/alembic/versions/: 6cff9dbe9043_first_revision.py  d0f6ed8d121a_initial_migration.py  f42de95858bf_update_event_relationship_with_user.py
agendardel/backend/: __init__.py  config.py  database.py  main.py  models.py  wrappers.py
agendardel/frontend/: main.py
agendardel/frontend/components/: auth.py  dashboard.py  edit.py  new_event.py  page.py  subscribe.py
